fix: remove truncate from aliasname

--- a/app/components/collection-table-row/styles.scss
+++ b/app/components/collection-table-row/styles.scss
@@ -23,7 +23,6 @@
     font-weight: bold;
   }
 
-  .alias,
   .branch span {
     white-space: nowrap;
     overflow: hidden;
